 2003-09-26 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.cpp: Add code that handles converting service to
      presentation format in a protocol independant way.
 2003-09-26 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.h: Add accessors for address size members.
    - ping/ping.cpp: Clean up use of libc and system calls.
    - skstream/skstream.cpp: Clean up handling socket address sizes
      when setting socket by descriptor in the buffer objects.
      Add code that handles converting address to presentation format
      in a protocol independant way.
 2003-09-25 Al Riddoch <alriddoch@zepler.org>
    - skstream/skpoll.cpp, skstream/skserver.cpp, skstream/skstream.cpp:
      Finish off fully qualifying all libc and system calls as being
      explicitly in the global namespace.
 2003-09-25 Al Riddoch <alriddoch@zepler.org>
    - Remove messy attempt to handle IPv6 addresses without getaddrinfo
 2003-09-25 James Turner <james@worldforge.org>
    - skstream/skstream.cpp: Fully qualify all libc and system calls as
      being explicitly in the global namespace.
 2003-09-24 James Turner <james@worldforge.org>
    - skstream/skstreamconfig.h.pbx: define HAVE_GETADDRINFO and HAVE_IN_ADDR_T
      for ProjectBuilder (framework) builds on OS-X, since OS-X supports
      these features.
 2003-09-24 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.cpp: Implement non-blocking connect with addrinfo list.
 2003-09-24 Al Riddoch <alriddoch@zepler.org>
    - Typo in in_addr_t check fixed.
    - skstream/skstream.cpp: Missed out typedef keyword fix.
 2003-09-24 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.cpp: Add check, and fallback definition for
      in_addr_t.
 2003-09-24 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.h, skstream/skstream.cpp: Re-write connecting
      code for IP datagram and stream sockets so they try each of the
      results from getaddrinfo in turn. Needs work on non-blocking
      sockets.