@@ -6,5 +6,5 @@ includedir=@includedir@
 Name: skstream
 Description: An iostream socket library.
 Version: @VERSION@
-Libs: -L${libdir} -lskstream-0.3
+Libs: -L${libdir} @SKSTREAM_LIBS@ @SKSTREAM_EXTRA_LIBS@
 Cflags: -I${includedir}/skstream-0.3 -I${libdir}/skstream-0.3/include
